--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,7 +78,7 @@ html {
 }
 
 body {
-    background: #f8faff;
+    background: #e6e7e7;
     color: #11142d;
     font-size: var(--p-font);
     font-weight: 400;
